@@ -5,6 +5,7 @@
             - Updated #6 to match current versions of Anonymine.
             - Tidied
             - Removed #0
+        * configure.py:  Wrote missing doc-strings.
     0.2.10
         * anonymine_engine.py (init_field2):
             - Use SIGTERM to kill children if SIGCONT is unavailable.
